--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = { version = "0.4.42", features = ["serde"] }
+clap = { version = "4.5.49", features = ["derive"] }
+log = "0.4.28"
+serde = {version = "1.0.228", features = ["derive"]}
+serde_json ="1.0.145"
+simple_logger = "5.1.0"
