--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ log = "0.4.28"
 serde = {version = "1.0.228", features = ["derive"]}
 serde_json ="1.0.145"
 simple_logger = "5.1.0"
+
+[dev-dependencies]
+tempfile = "3"
