--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 chrono = { version = "0.4.42", features = ["serde"] }
+chrono-humanize = "0.2.3"
 clap = { version = "4.5.49", features = ["derive"] }
 log = "0.4.28"
 serde = {version = "1.0.228", features = ["derive"]}
