--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ clap = { version = "4.5.49", features = ["derive"] }
 log = "0.4.28"
 serde = {version = "1.0.228", features = ["derive"]}
 serde_json ="1.0.145"
-simple_logger = "5.1.0"
+simplelog = "0.12.2"
 
 [dev-dependencies]
 tempfile = "3"
