--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ log = "0.4.28"
 serde = {version = "1.0.228", features = ["derive"]}
 serde_json ="1.0.145"
 simplelog = "0.12.2"
+colored = "3.0.0"
 
 [dev-dependencies]
 tempfile = "3"
